<resources>
    <string name="app_name">Book_A_Meal</string>
    <string name="app_name_main">Book A Meal</string>
    <string name="login_main_menu">Login</string>
    <string name="register_main_menu">Register</string>
    <string name="loginCaterer_main_menu">Login as a Caterer</string>
    <string name="registerCaterer_main_menu">Register as a Caterer</string>
    <string name="name_main_menu">Name</string>
    <string name="email_main_menu">Email</string>
    <string name="phoneNumber_main_menu">Phone Number</string>
    <string name="password_main_menu">Password</string>
    <string name="cateringService_main_menu">Catering Service</string>
    <string name="continueButton_main_menu">CONTINUE</string>

</resources>
